--- a/module-1/lab-numpy/your-code/lab-numpy.ipynb
+++ b/module-1/lab-numpy/your-code/lab-numpy.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,20 +99,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[0.06625576 0.18283852 0.98421985 0.96335409 0.69603384]\n",
-      "  [0.12815399 0.62863313 0.48656537 0.09410971 0.46115165]\n",
-      "  [0.57970303 0.22790876 0.03657706 0.55297284 0.08588952]]\n",
+      "[[[0.20634962 0.95372492 0.12167927 0.96113709 0.7082851 ]\n",
+      "  [0.86795359 0.48947096 0.71703206 0.75743755 0.95396824]\n",
+      "  [0.59829727 0.42485552 0.8912097  0.37489913 0.88351403]]\n",
       "\n",
-      " [[0.05070821 0.41664302 0.12191976 0.40891067 0.65792878]\n",
-      "  [0.09829063 0.23446014 0.12113647 0.15105173 0.36078087]\n",
-      "  [0.84358899 0.32814919 0.98549377 0.04034422 0.77231909]]]\n"
+      " [[0.92157202 0.17865589 0.86717296 0.70433192 0.60227104]\n",
+      "  [0.85564497 0.86879059 0.41653511 0.22514706 0.40217194]\n",
+      "  [0.26057762 0.22915584 0.15863307 0.10840772 0.61883916]]]\n"
      ]
     }
    ],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
        "False"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,12 +231,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1., 1., 1., 1., 1.],\n",
+       "        [1., 1., 1., 1., 1.],\n",
+       "        [1., 1., 1., 1., 1.]],\n",
+       "\n",
+       "       [[1., 1., 1., 1., 1.],\n",
+       "        [1., 1., 1., 1., 1.],\n",
+       "        [1., 1., 1., 1., 1.]]])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#your code here\n",
-    "c = np.transpose(b)"
+    "c = b.reshape(2,3,5)\n",
+    "c"
    ]
   },
   {
@@ -248,24 +266,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "operands could not be broadcast together with shapes (2,3,5) (3,2,5) ",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-f0a4d3695cc6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0md\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (2,3,5) (3,2,5) "
-     ]
+     "data": {
+      "text/plain": [
+       "array([[[1.20634962, 1.95372492, 1.12167927, 1.96113709, 1.7082851 ],\n",
+       "        [1.86795359, 1.48947096, 1.71703206, 1.75743755, 1.95396824],\n",
+       "        [1.59829727, 1.42485552, 1.8912097 , 1.37489913, 1.88351403]],\n",
+       "\n",
+       "       [[1.92157202, 1.17865589, 1.86717296, 1.70433192, 1.60227104],\n",
+       "        [1.85564497, 1.86879059, 1.41653511, 1.22514706, 1.40217194],\n",
+       "        [1.26057762, 1.22915584, 1.15863307, 1.10840772, 1.61883916]]])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#your code here\n",
-    "d = np.add(a,c)"
+    "d = np.add(a,c)\n",
+    "d"
    ]
   },
   {
@@ -277,31 +301,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[0.06625576 0.18283852 0.98421985 0.96335409 0.69603384]\n",
-      "  [0.12815399 0.62863313 0.48656537 0.09410971 0.46115165]\n",
-      "  [0.57970303 0.22790876 0.03657706 0.55297284 0.08588952]]\n",
+      "[[[0.20634962 0.95372492 0.12167927 0.96113709 0.7082851 ]\n",
+      "  [0.86795359 0.48947096 0.71703206 0.75743755 0.95396824]\n",
+      "  [0.59829727 0.42485552 0.8912097  0.37489913 0.88351403]]\n",
       "\n",
-      " [[0.05070821 0.41664302 0.12191976 0.40891067 0.65792878]\n",
-      "  [0.09829063 0.23446014 0.12113647 0.15105173 0.36078087]\n",
-      "  [0.84358899 0.32814919 0.98549377 0.04034422 0.77231909]]]\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-418a2755466d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'd' is not defined"
+      " [[0.92157202 0.17865589 0.86717296 0.70433192 0.60227104]\n",
+      "  [0.85564497 0.86879059 0.41653511 0.22514706 0.40217194]\n",
+      "  [0.26057762 0.22915584 0.15863307 0.10840772 0.61883916]]]\n",
+      "[[[1.20634962 1.95372492 1.12167927 1.96113709 1.7082851 ]\n",
+      "  [1.86795359 1.48947096 1.71703206 1.75743755 1.95396824]\n",
+      "  [1.59829727 1.42485552 1.8912097  1.37489913 1.88351403]]\n",
+      "\n",
+      " [[1.92157202 1.17865589 1.86717296 1.70433192 1.60227104]\n",
+      "  [1.85564497 1.86879059 1.41653511 1.22514706 1.40217194]\n",
+      "  [1.26057762 1.22915584 1.15863307 1.10840772 1.61883916]]]\n"
      ]
     }
    ],
@@ -320,24 +340,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "operands could not be broadcast together with shapes (2,3,5) (3,2,5) ",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-9067e54c6323>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0me\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmultiply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (2,3,5) (3,2,5) "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#your code here\n",
-    "e = np.multiply(a,c)"
+    "#e = np.multiply(a,c)\n",
+    "e = a * c"
    ]
   },
   {
@@ -349,19 +358,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'e' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-838818be68fe>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray_equal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'e' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -487,21 +495,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-27-2865f2bf6fe3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#your code here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'd' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#your code here\n"
    ]
